--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -1,13 +1,14 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  title: "Ruby Programming"
+  title: "Programming Ruby"
   description: "Learn Ruby basics"
   price: 29.99
 
 two:
   title: "Rails Guide"
   description: "Master Ruby on Rails"
+  image_url: "lorem.jpg"
   price: 39.99
 
 pragprog:
@@ -15,8 +16,8 @@ pragprog:
   description: Your Journey To Mastery, 20th Anniversary Edition (2nd Edition)
   price: 39.99
 
-ruby_book:
-  title: "Programming Ruby"
-  description: "The Pragmatic Programmer's Guide"
-  price: 49.50
-  image_url: "lorem.jpg"
+#ruby_book:
+ # title: "Programming Ruby"
+  #description: "The Pragmatic Programmer's Guide"
+  #price: 49.50
+  #image_url: "lorem.jpg"
